--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ div {
     <div class="otherBooks">
         <h1 class="topic">Other Books</h1>
         <div class="box">
-            <img src="./index_files/srimad bhagwatam.jpg" alt="" width="200px" height="300px">
+            <img src="srimad bhagwatam.jpg" alt="" width="200px" height="300px">
             <h2>Srimad Bhagawatam – As It Is</h2>
    <h3>One may cleanse himself daily by taking a bath in water, but if one takes a bath even once in the sacred Ganges water of Bhagavad-Gita, for him the dirt of material life is altogether vanquished.</h3>
    <button class="btn1">Buy Now</button>
