--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ div {
         </div>
     </form>
     <div class="about">
-        <img src="C:\Users\Abhisht Pandey\Downloads\index_files\bhagwad gita.jpg" alt="Nothing" width="300px" height="400px">
+        <img src="bhagwad gita.jpg" alt="Nothing" width="300px" height="400px">
         <div class="content">
         <h2>Shrimad Bhagavad gita Original</h2>
         <h3>Essence Of Vedas</h3>
