--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ div {
         </div>
     </form>
     <div class="about">
-        <img src="bhagwad gita.jpg" alt="Nothing" width="300px" height="400px">
+        <img src="bhagwad gita.jpg" alt="This is an image." width="300px" height="400px">
         <div class="content">
         <h2>Shrimad Bhagavad gita Original</h2>
         <h3>Essence Of Vedas</h3>
@@ -335,14 +335,14 @@ div {
    <button class="btn1">Buy Now</button>
         </div>
         <div class="box">
-            <img src="./index_files/krishna book.jpg" alt="" width="200px" height="300px">
+            <img src="krishna book.jpg" alt="" width="200px" height="300px">
             <h2>The Krishna Book</h2>
 
 <h3>Get drawn into the story of Krishna's life. Krsna, The Supreme Personality of Godhead tells the story of Krishna's life from Srimad-Bhagavatam,the summit of the Vedas.</h3>
 <button class="btn1">Buy Now</button>
         </div>
         <div class="box">
-            <img src="./index_files/chaitanya charitamrita.jpg" alt="" width="200px" height="300px">
+            <img src="chaitanya charitamrita.jpg" alt="" width="200px" height="300px">
             <h2>Chaitanya Charitamrita</h2>
 
 <h3>“Who is Krishna Chaitanya, and what is His significance?” Sri Chaitanya-charitamrita is the main work on the life and teachings of Sri Chaitanya Mahaprabhu (Krishna Himself).</h3>
