--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQs Page</title>
     <!-- Add icon library -->
-<link rel="stylesheet" href="./index_files/font-awesome.min.css">  
+<link rel="stylesheet" href="font-awesome.min.css">  
 <style>
     .nav{
     background-color: black;
