--- a/index.html
+++ b/index.html
@@ -412,10 +412,18 @@ div {
 </footer>
 <nav class="social-navigation">
     <!-- Add font awesome icons -->
-<a href="https://m.facebook.com/" class="fa fa-facebook"></a>
-<a href="https://m.twitter.com/" class="fa fa-twitter"></a>
-<a href="https://m.youtube.com/" class="fa fa-youtube"></a>
-<a href="https://m.linkedin.com/" class="fa fa-linkedin"></a>
+<a href="https://m.facebook.com/" class="fa fa-facebook">
+	<img src="fb_icon.png">
+</a>
+<a href="https://m.twitter.com/" class="fa fa-twitter">
+	<img src="twitter_logo.png">
+</a>
+<a href="https://m.youtube.com/" class="fa fa-youtube">
+	<img src="youtube_logo.png">
+</a>
+<a href="https://m.linkedin.com/" class="fa fa-linkedin">
+	<img src="linkedin_icon.png">
+</a>
 </nav>
 
 <!-- Code injected by live-server -->
