--- a/index.html
+++ b/index.html
@@ -413,16 +413,16 @@ div {
 <nav class="social-navigation">
     <!-- Add font awesome icons -->
 <a href="https://m.facebook.com/" class="fa fa-facebook">
-	<img src="fb_icon.png">
+	<img src="fb_icon.png" style="width:42px;height:42px;">
 </a>
 <a href="https://m.twitter.com/" class="fa fa-twitter">
-	<img src="twitter_logo.png">
+	<img src="twitter_logo.png" style="width:42px;height:42px;">
 </a>
 <a href="https://m.youtube.com/" class="fa fa-youtube">
-	<img src="youtube_logo.png">
+	<img src="youtube_logo.png" style="width:42px;height:42px;">
 </a>
 <a href="https://m.linkedin.com/" class="fa fa-linkedin">
-	<img src="linkedin_icon.png">
+	<img src="linkedin_icon.png" style="width:42px;height:42px;">
 </a>
 </nav>
 
