--- a/index.html
+++ b/index.html
@@ -264,22 +264,22 @@ div {
   }
   /* Facebook */
   .fa-facebook {
-    background: #3B5998;
+    <!background: #3B5998;>
     color: white;
   }
   
   /* Twitter */
   .fa-twitter {
-    background: #55ACEE;
+    <!background: #55ACEE;>
     color: white;
   }
   .fa-youtube {
-    background: rgb(233, 31, 31);
+    <!background: rgb(233, 31, 31);>
     color: white;
   }
   .fa-linkedin {
-    <img src="linkedin_icon.png" style="width:42px;height:42px;">	  
-    background: rgb(31, 31, 191);
+	  
+    <!background: rgb(31, 31, 191);>
     color: white;
   }
  
@@ -423,7 +423,7 @@ div {
 	<img src="youtube_logo.png" style="width:42px;height:42px;">
 </a>
 <a href="https://m.linkedin.com/" class="fa fa-linkedin">
-
+    <img src="linkedin_icon.png" style="width:42px;height:42px;">
 </a>
 </nav>
 
