--- a/index.html
+++ b/index.html
@@ -265,21 +265,29 @@ div {
   /* Facebook */
   .fa-facebook {
     <!background: #3B5998;>
+    background-image: url('fb_icon.png');
+    background-size: 42px 42px;
     color: white;
   }
   
   /* Twitter */
   .fa-twitter {
     <!background: #55ACEE;>
+    background-image: url('twitter_logo.png');
+    background-size: 42px 42px;
     color: white;
   }
   .fa-youtube {
     <!background: rgb(233, 31, 31);>
+    background-image: url('youtube_logo.png');
+    background-size: 42px 42px;
     color: white;
   }
   .fa-linkedin {
 	  
     <!background: rgb(31, 31, 191);>
+    background-image: url('linkedin_icon.png');
+    background-size: 42px 42px;	  
     color: white;
   }
  
@@ -414,16 +422,16 @@ div {
 <nav class="social-navigation">
     <!-- Add font awesome icons -->
 <a href="https://m.facebook.com/" class="fa fa-facebook">
-	<img src="fb_icon.png" style="width:42px;height:42px;">
+	
 </a>
 <a href="https://m.twitter.com/" class="fa fa-twitter">
-	<img src="twitter_logo.png" style="width:42px;height:42px;">
+
 </a>
 <a href="https://m.youtube.com/" class="fa fa-youtube">
-	<img src="youtube_logo.png" style="width:42px;height:42px;">
+
 </a>
 <a href="https://m.linkedin.com/" class="fa fa-linkedin">
-    <img src="linkedin_icon.png" style="width:42px;height:42px;">
+
 </a>
 </nav>
 
