--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ div {
   /* Facebook */
   .fa-facebook {
     <!background: #3B5998;>
-    background-image: url('fb_icon.png');
+    background: url('fb_icon.png');
     background-size: 42px 42px;
     color: white;
   }
@@ -273,20 +273,20 @@ div {
   /* Twitter */
   .fa-twitter {
     <!background: #55ACEE;>
-    background-image: url('twitter_logo.png');
+    background: url('twitter_logo.png');
     background-size: 42px 42px;
     color: white;
   }
   .fa-youtube {
     <!background: rgb(233, 31, 31);>
-    background-image: url('youtube_logo.png');
+    background: url('youtube_logo.png');
     background-size: 42px 42px;
     color: white;
   }
   .fa-linkedin {
 	  
     <!background: rgb(31, 31, 191);>
-    background-image: url('linkedin_icon.png');
+    background: url('linkedin_icon.png');
     background-size: 42px 42px;	  
     color: white;
   }
