--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ div {
   .fa-youtube {
 
     background: url('youtube_logo.png');
-    background-size: 100% 100%
+    background-size: auto;
     color: white;
   }
   .fa-linkedin {
